# StatTools

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run-tests.yml  test-and-release.yml
StatTools/analysis/: DPXA.py  __init__.py  dfa.py  dpcca.py  dpcca_as_class.py  support_ff.py  utils.py
StatTools/experimental/synthesis/: tools.py
StatTools/filters/: kalman_filter.py
StatTools/generators/: fbm.py  kasdin_generator.py  ndfnoise_generator.py
StatTools/visualization/: __init__.py  ff_plot.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  releaseInstructions.md  systemPatterns.md  techContext.md
research/: ff_analysis.ipynb  ndfnoise_generator.ipynb
research/kalman_filter/: high-order_kalman.ipynb  kalman-kasdin.ipynb  kalman_filter.ipynb  kalman_filter[ru].ipynb  svd_dfa_demo.ipynb
src/cpp/: StatTools_bindings.cpp
tests/: test_dfa.py  test_dfa_func.py  test_kasdin_generator.py  test_multiple_utils.py  test_nddfa.py  test_ndfnoise_generator.py  test_pybind11_bindings.py  test_svd_dfa.py  test_unified_generator.py  test_utils.py
tests_manual/: ff_visualization_test.py  ff_zero_crossover_visualisation_test.py
