[build-system]
requires = [
    "setuptools>=64.0.0",
    "wheel",
    "numpy>=1.22.4",
    "setuptools-scm>=8",
    "pandas>=2.0.0",
    "pybind11>=2.11.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "FluctuationAnalysisTools"
# version = "1.6.1"
dynamic = ["version"]
authors = [
  {name = "Aleksandr Sinitca", email = "amsinitca@etu.ru"},
  {name = "Alexandr Kuzmenko", email = "alexander.k.spb@gmail.com"},
  {name = "Asya Lyanova", email = "ailianova@etu.ru"},
]
maintainers = [
  {name = "Aleksandr Sinitca", email = "amsinitca@etu.ru"}
]
description = "This library allows to create and process long-term dependent datasets."
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.22.4",
    "psutil==5.8.0",
    "scipy>=1.13.1",
    "setuptools>=70.0.0",
    "tqdm~=4.62.3",
    "pandas>=1.3.5",
    "filterpy>=1.4.5",
    "sympy>=1.14.0",
    "pybind11>=2.11.1",
]

[project.urls]
Repository = "https://github.com/Digiratory/StatTools.git"
Issues = "https://github.com/Digiratory/StatTools/issues"
Changelog = "https://github.com/Digiratory/StatTools/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
version_file = "StatTools/_version.py"
tag_regex = "^release/([\\.0-9]+)$"
